<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroud">

        <TextView
            android:id="@+id/voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="350dp"
            android:background="@drawable/ic_voltar_nav"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ordem"
            android:textSize="40dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp" />

        <!-- Campo Descrição do Serviço -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_descricao_servico"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="15dp"
                android:maxLines="1"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo Porte do Sistema -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPorte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_porte_sistema"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="15dp"
                android:maxLines="1"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo Valor R$ -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_valor"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="15dp"
                android:maxLines="1"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:layout_gravity="center"
            android:background="@drawable/backgroud_buttom_editar"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_excluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Excluir"
            android:layout_gravity="center"
            android:background="@drawable/backgroud_buttom_excluir"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
